--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,15 +1,164 @@
-html{
+body{
+    height:100vh;
+    width:100%;
+    display:flex;
+    align-items: center;
+    justify-content: center;
     padding:0px;
     margin:0px;
+    background: rgb(208,17,56);
+    background: linear-gradient(90deg, rgba(208,17,56,1) 0%, rgba(125,5,222,1) 100%);
 }
-body{
-    height:100%;
+
+.background{
+    position:absolute;
+    opacity:60%;
     width:100%;
+    height:95%;
+    box-sizing:border-box;
+    bottom:5%;
+    right:0.7%;
+   
 }
 
 .container{
-    height:100vh;
-    width:100vw;
-    background: rgb(34,193,195);
-    background: linear-gradient(0deg, rgba(34,193,195,1) 0%, rgba(253,187,45,1) 100%);
+    height:60%;
+    width:70%;
+    background: rgb(54, 69, 79);
+    border-radius: 40px 40px;
+    box-shadow: 5px solid  black;
+    position:relative;
+    justify-content: center;
+    flex-direction: column;
+    opacity:300%;
+    color:white;
+   
 }
+
+/* start of styling for header */
+.header{
+    display:flex;
+    justify-content: space-between;
+    padding:30px;
+    height:70%;
+    font-size:20px;
+    font-weight: bold;
+    animation: fadeIn2 1.0s;
+    transition-timing-function: ease-out;
+}
+
+.title{
+    font-size: 30px;
+}
+
+.header-items{
+    display:flex;
+    flex-direction: column;
+    align-items: flex-end;
+    gap:3px;
+}
+
+#locationLogo{
+    height:85px;
+    width:70px
+}
+
+#form{
+    justify-self: flex-end;
+    align-self: flex-end;
+}
+
+
+/* end of styling for header */
+
+
+/* start of styling for body content */
+.content{
+    height:30%; 
+    
+}
+.weather-content{
+    display:flex;
+    background-color: darkslategrey;
+    width:100%;
+    height:100%;
+    font-size: 25px;
+    justify-content: center;
+    align-items: center;
+    border-bottom-left-radius: 40px;
+    border-bottom-right-radius: 40px;
+}
+
+.current{
+    width:35%;
+    display:flex;
+    gap:22px 22px;
+    justify-content: center;
+    align-items: center;
+    animation: fadeIn 1.0s;
+    transition-timing-function: ease-out;
+}
+
+.currentContent{
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    
+}
+
+.currentTemperature{
+    font-size:80px;
+}
+
+#currentWeatherIcon{
+    height:100px;
+    width:55px;
+}
+
+.forecast-content{
+    display:flex;
+    gap:30px 30px;
+    font-size: 25px;
+    justify-content: center;
+    align-items: center;
+}
+
+.forecast{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap:15px 15px;
+    animation: fadeIn 1.0s;
+    transition-timing-function: ease-out;
+}
+
+.error{
+    background-color: red;
+    color: white;
+    font-weight: bold;
+    font-size: 15px;
+}
+
+/* end of styling for body content */
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+    top: 6rem;
+  }
+  100% {
+    opacity: 0.5;
+    top: 4.4rem;
+  }
+}
+
+@keyframes fadeIn2 {
+    0% {
+      opacity: 0.1;
+      transform: scale(0.9, 0.9);
+    }
+    100% {
+      opacity: 1;
+    }
+  }
