--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -10,23 +10,12 @@ body{
     background: linear-gradient(90deg, rgba(208,17,56,1) 0%, rgba(125,5,222,1) 100%);
 }
 
-.background{
-    position:absolute;
-    opacity:60%;
-    width:100%;
-    height:95%;
-    box-sizing:border-box;
-    bottom:5%;
-    right:0.7%;
-   
-}
-
 .container{
     height:60%;
     width:70%;
     background: rgb(54, 69, 79);
     border-radius: 40px 40px;
-    box-shadow: 5px solid  black;
+    box-shadow: 3px 3px black;
     position:relative;
     justify-content: center;
     flex-direction: column;
@@ -68,7 +57,6 @@ body{
     align-self: flex-end;
 }
 
-
 /* end of styling for header */
 
 
@@ -87,6 +75,7 @@ body{
     align-items: center;
     border-bottom-left-radius: 40px;
     border-bottom-right-radius: 40px;
+    box-shadow: 3px 3px black;
 }
 
 .current{
